- some code and tests improvements